test: achieve 100% test coverage for Order and Notification modules
- Add unit tests for OrderDto and NotificationDto covering Lombok methods
- Add missing branch coverage in OrderService, OrderStatus, and NotificationService
- Remove unreachable/dead code in NotificationService
- Ensure 100% Jacoco coverage on Order and Notification Controllers and Services